After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 639792 - Regional panel: "Add" dialog: combos not sorted
Regional panel: "Add" dialog: combos not sorted
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkComboBox
unspecified
Other Linux
: Normal normal
: 3.0
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-01-17 21:58 UTC by Matthias Clasen
Modified: 2011-01-18 03:03 UTC
See Also:
GNOME target: 3.0
GNOME version: ---


Attachments
testcase (1.07 KB, text/x-csrc)
2011-01-18 01:42 UTC, Matthias Clasen
Details

Description Matthias Clasen 2011-01-17 21:58:19 UTC
The "Country" combo appears not sorted anymore, which makes it very hard to select a country. The "Language" combo has the same problem
Comment 1 Sergey V. Udaltsov 2011-01-17 22:20:39 UTC
Confirming. See it here
Comment 2 Sergey V. Udaltsov 2011-01-17 22:23:08 UTC
That's very odd. The sorting is using standard function gtk_tree_sortable_set_sort_column_id. It worked before. Not any more ...
Comment 3 Sergey V. Udaltsov 2011-01-17 22:34:52 UTC
That code was not changed since 2.32. It looks like some regression in gtk+
Comment 4 Sergey V. Udaltsov 2011-01-17 23:10:47 UTC
After some testing:
If I call gtk_tree_sortable_set_sort_column_id before actually populating liststore - it works. If I do that when liststore is already populated - it does not work.
Comment 5 Matthias Clasen 2011-01-18 01:42:32 UTC
Created attachment 178575 [details]
testcase

Here is a small testcase. Setting the sort column before adding the model to the combo box works, doing it afterwards does not.
Treemenu regression, I'd say.