Setting sorting before populating list stores

This is workaround for broken gtk behaviour.
https://bugzilla.gnome.org/show_bug.cgi?id=639792